--- a/code/web/template/menu.ejs
+++ b/code/web/template/menu.ejs
@@ -13,10 +13,10 @@
             <a class="nav-link" href="/backlog/<%= response.projectId %>">Backlog</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/task">tâches</a>
+            <a class="nav-link" href="/task">Tâches</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/task/active">tâches sprint actif</a>
+            <a class="nav-link" href="/task/active">Tâches sprint actif</a>
         </li>
       <% } %>
    </ul>
