--- a/code/web/template/editTask.ejs
+++ b/code/web/template/editTask.ejs
@@ -40,7 +40,7 @@
                         ></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="edittask-duration">Duration en heures</label>
+                        <label for="edittask-duration">Durée en heures</label><br>
                         <input
                             type="number"
                             name="duration"
@@ -50,7 +50,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="edittask-userstory">User Story</label><br />
+                        <label for="edittask-userstory">User Story associée</label><br />
                         <input
                             type="text"
                             list="userStories"
