--- a/code/web/template/actifTasks.ejs
+++ b/code/web/template/actifTasks.ejs
@@ -6,7 +6,7 @@
     </head>
 <body>
     <%- include('header'); %>
-    <div class="container-fluid">
+    <div class="container-fluid mt-3">
         <div class="row">
             <div class="col-4">
                 <div class="card">
@@ -15,12 +15,10 @@
                     </div>
                     <div class="card-body">
                         <ul class="list-group sourceAndDestination" data-dropzoneType="todo">
-                            <% if (true) { %>
-                                <li class="list-group-item text-center">Faites un glisser-déposer pour ajouter une tâche</li>
-                            <% } %>
+                            <li class="list-group-item text-center">Faites un glisser-déposer pour ajouter une tâche</li>
                             <% response.tasks.forEach((task, index) => { %>
                                 <% if (task.state === "todo") { %>
-                                    <li id="<%= task.id %>" class="list-group-item d-flex flex-column justify-content-between mb-2 draggable" draggable="true">
+                                    <li id="<%= task.id %>" class="list-group-item d-flex flex-column justify-content-between draggable" draggable="true">
                                         <div>
                                             <span>ID: <%= task.id %> </span> &ensp;
                                             <span>US: <%= task.us %> </span>
@@ -40,9 +38,10 @@
                     </div>
                     <div class="card-body">
                         <ul class="list-group sourceAndDestination" data-dropzoneType="doing">
+                            <li class="list-group-item text-center">Faites un glisser-déposer pour ajouter une tâche</li>
                             <% response.tasks.forEach((task, index) => { %>
                                 <% if (task.state === "doing") { %>
-                                    <li id="<%= task.id %>" class="list-group-item d-flex flex-column justify-content-between mb-2 draggable" draggable="true">
+                                    <li id="<%= task.id %>" class="list-group-item d-flex flex-column justify-content-between draggable" draggable="true">
                                         <div>
                                             <span>ID: <%= task.id %> </span> &ensp;
                                             <span>US: <%= task.us %> </span>
@@ -51,9 +50,6 @@
                                     </li>
                                 <% } %>
                             <% }) %>
-                            <% if (true) { %>
-                                <li class="list-group-item text-center">Faites un glisser-déposer pour ajouter une tâche</li>
-                            <% } %>
                         </ul>
                     </div>
                 </div>
@@ -65,12 +61,10 @@
                     </div>
                     <div class="card-body">
                         <ul class="list-group sourceAndDestination" data-dropzoneType="done">
-                            <% if (true) { %>
-                                <li class="list-group-item text-center">Faites un glisser-déposer pour ajouter une tâche</li>
-                            <% } %>
+                            <li class="list-group-item text-center">Faites un glisser-déposer pour ajouter une tâche</li>
                             <% response.tasks.forEach((task, index) => { %>
                                 <% if (task.state === "done") { %>
-                                    <li id="<%= task.id %>" class="list-group-item d-flex flex-column justify-content-between mb-2 draggable" draggable="true">
+                                    <li id="<%= task.id %>" class="list-group-item d-flex flex-column justify-content-between draggable" draggable="true">
                                         <div>
                                             <span>ID: <%= task.id %> </span> &ensp;
                                             <span>US: <%= task.us %> </span>
