Correction sprint + fermeture US backlog

--- a/code/web/template/task.ejs
+++ b/code/web/template/task.ejs
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col">
                 <select id="sprintsSelect" class="mb-2">
-                    <option value="">Tous les sprints</option>
+                    <option value="">Toutes les tâches</option>
                     <% response.sprints.forEach((sprint, index) => { %>
                         <option value="<%= sprint.id %>">
                             <%= sprint.name %> 
