Correction faute de frappe

--- a/code/web/template/project.ejs
+++ b/code/web/template/project.ejs
@@ -22,7 +22,7 @@
                             <tr>
                                 <th scope="col">Nom</th>
                                 <th scope="col">Description</th>
-                                <th scope="col">Propirétaire</th>
+                                <th scope="col">Propriétaire</th>
                             </tr>
                         </thead>
                         <tbody id="projectList">
